--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,14 @@
 :root {
-  --silver: rgb(190, 209, 209);
-  --accent: rgb(224, 31, 96);
+	--silver: rgb(190, 209, 209);
+	--accent: rgb(224, 31, 96);
+	--ui: rgb(16, 16, 35);
 }
-
 
 *,
 *::after,
 *::before {
-  box-shadow: border-box;
-  user-select: none;
-}
-
-
-body {
-	background-color: rgb(4, 4, 21);
-	color: var(--silver);
-	min-height: 100vh;
-	display: grid;
-	place-items: center;
-	text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	box-sizing: border-box;
+	user-select: none;
 }
 
 *::-webkit-scrollbar {
@@ -30,6 +19,19 @@ body {
 	scrollbar-width: thin;
 	scrollbar-color: rgba(255, 0, 111, 0) transparent;
 }
+
+body {
+	margin: 0;
+	  padding: 0;
+	  background-color: rgb(4, 4, 21);
+	  color: var(--silver);
+	  min-height: 100vh;
+	  display: grid;
+	  place-items: center;
+	  text-align: center;
+	  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
 
 .loading {
 	width: 6px;
@@ -51,49 +53,4 @@ body {
 		left: 100%;
 		right: 0;
 	}
-}
-
-.set {
-	display: flex;
-	flex-direction: column;
-	gap: 0.2rem;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
-}
-
-input[type="number"] {
-	padding: 0.5rem;
-	border: none;
-	background-color: var(--accent);
-	color: var(--silver);
-	font-size: large;
-	border-radius: 10rem;
-	text-align: center;
-	appearance: textfield;
-	-moz-appearance: textfield; /* For Firefox */
-	-webkit-appearance: textfield;
-	cursor: default;
-}
-
-input:focus, button {
-  outline: none;
-}
-
-button {
-	border-radius: 10rem;
-	padding: 1rem;
-	border: none;
-	background: var(--silver);
-	color: var(--accent);
-	font-size: large;
-	transition: all 0.2s ease-in-out;
-}
-
-button:hover {
-	background-color: var(--accent);
-	color: white;
 }
